vininfo changelog
=================


v0.2.0
------
+ Added basic info for Nissan.
* Coachwork renamed to body.


v0.1.0
------
+ Basic functionality.