@@ -1,2 +1,4 @@
 from .avtovaz import AvtoVazDetails
 from .nissan import NissanDetails
+from .opel import OpelDetails
+from .renault import RenaultDetails
