@@ -1,7 +1,7 @@
 # -*- encoding: utf-8 -*-
 from __future__ import unicode_literals
 
-from ..brands import Lada, Nissan
+from ..brands import Lada, Nissan, Opel, Renault
 
 
 WMI = {
@@ -9,6 +9,7 @@ WMI = {
     'AHT': 'Toyota',
     'AFA': 'Ford',
     'CL9': 'Wallyscar',
+    'GA1': Renault(),
     'JA': 'Isuzu',
     'JC1': 'Fiat Automobiles/Mazda',
     'JF': 'Fuji Heavy Industries',
@@ -25,10 +26,10 @@ WMI = {
     'KL': 'Daewoo/GM Korea',
     'KM': 'Hyundai',
     'KN': 'Kia',
-    'KNM': 'Renault Samsung',
+    'KNM': Renault('Renault Samsung'),
     'KPA': 'SsangYong',
     'KPT': 'SsangYong',
-    'L56': 'Renault Samsung',
+    'L56': Renault('Renault Samsung'),
     'L5Y': 'Merato Motorcycle Taizhou Zhongneng',
     'L6T': 'Geely',
     'LBE': 'Beijing Hyundai',
@@ -82,6 +83,7 @@ WMI = {
     'SHH': 'Honda',
     'SHS': 'Honda',
     'SJN': Nissan(),
+    'SKF': Opel(),
     'TCC': 'Micro Compact Car AG (SMART 1998-1999)',
     'TMA': 'Hyundai',
     'TMB': 'Škoda',
@@ -90,8 +92,8 @@ WMI = {
     'U5Y': 'Kia',
     'UU': 'Dacia',
     'VA0': 'ÖAF',
-    'VF1': 'Renault',
-    'VF2': 'Renault',
+    'VF1': Renault(),
+    'VF2': Renault(),
     'VF3': 'Peugeot',
     'VF4': 'Talbot',
     'VF5': 'Iveco Unic SA',
@@ -129,10 +131,13 @@ WMI = {
     'WV1': 'Volkswagen Commercial Vehicles',
     'WV2': 'Volkswagen Commercial Vehicles',
     'W09': 'Ruf Automobile',
-    'W0L': 'Opel/Vauxhall',
-    'W0SV': 'Opel Special Vehicles',
+    'W0L': Opel('Opel/Vauxhall'),
+    'W0S': Opel('Opel Special Vehicles'),
     'XLR': 'DAF Trucks',
     'XTA': Lada('AvtoVAZ'),
+    'XUF': Opel(),
+    'XWF': Opel(),
+    'X7L': Renault(),
     'YK1': 'Saab',
     'YS2': 'Scania, Södertälje',
     'YS3': 'Saab',
@@ -141,6 +146,7 @@ WMI = {
     'YV1': 'Volvo Cars',
     'YV2': 'Volvo Trucks',
     'YV3': 'Volvo Buses',
+    'Y6D': Opel(),
     'ZA9': 'Bugatti',
     'ZAM': 'Maserati',
     'ZAR': 'Alfa Romeo',
@@ -189,6 +195,7 @@ WMI = {
     '3N': Nissan(),
     '3VW': 'Volkswagen',
     '4F': 'Mazda',
+    '4GD': Opel(),
     '4J': 'Mercedes-Benz',
     '4M': 'Mercury',
     '4S': 'Subaru-Isuzu Automotive',
@@ -219,7 +226,7 @@ WMI = {
     '8AG': 'General Motors',
     '8AW': 'Volkswagen',
     '8AJ': 'Toyota',
-    '8A1': 'Renault',
+    '8A1': Renault(),
     '8AC': 'Mercedes Benz',
     '8BC': 'Citroën',
     '8AD': 'Peugeot',
@@ -233,7 +240,7 @@ WMI = {
     '9BR': 'Toyota',
     '936': 'Peugeot',
     '935': 'Citroën',
-    '93Y': 'Renault',
+    '93Y': Renault(),
     '93X': 'Souza Ramos - Mitsubishi / Suzuki',
     '9BH': 'Hyundai Motor Company / Hyundai',
     '95P': 'CAOA / Hyundai',
@@ -293,12 +300,15 @@ WMI = {
     'TN9': 'Karosa',
     'TRA': 'Ikarus Bus',
     'TSE': 'Ikarus Egyedi Autobuszgyar',
-    'UU1': 'Renault Dacia',
+    'UU1': Renault('Renault Dacia'),
     'VLU': 'Scania',
     'VNE': 'Irisbus',
+    'VN1': Opel(),
     'VSE': 'Suzuki / Santana Motors',
     'VSK': Nissan(),
-    'VSX': 'Opel',
+    'VSX': Opel('Opel'),
+    'VSY': Renault(),
+    'VS5': Renault(),
     'VS6': 'Ford',
     'VS9': 'Carrocerias Ayats',
     'VWV': 'Volkswagen',
@@ -363,5 +373,5 @@ WMI = {
     '8AK': 'Suzuki',
     '93U': 'Audi',
     '93R': 'Toyota',
-    '9FB': 'Renault',
+    '9FB': Renault(),
 }
