@@ -2,6 +2,11 @@ vininfo changelog
 =================
 
 
+Unreleased
+----------
++ Added basic info for Opel and Renault.
+
+
 v0.2.0
 ------
 + Added basic info for Nissan.
